tests/compile_fail/fn-arg-no-self.stderr
error: expected self
 --> $DIR/fn-arg-no-self.rs:7:12
  |
7 |     fn len(x: &Foo) -> usize;
  |            ^
